Fixed filter selection panel alignment issue, removed asterisk from selected labels
Former-commit-id: 9849cb2674648ef647f622ee611fe0393823bc69

--- a/assets/less/edware.less
+++ b/assets/less/edware.less
@@ -928,4 +928,5 @@ table {
   padding-top: 10px;
   font-size: 15px;
   font-weight: normal;
+  display: none;
 }
